\name{geneXtendeRnews}
\title{geneXtendeR News}
\encoding{UTF-8}

\section{Version 1.3.2}{\itemize{

\item New allPeakLengths() function.

}}

\section{Version 1.3.1}{\itemize{

\item New cumulative line plot (cumlinePlot()) function.

\item Output to distinct() function is a lot more visually appealing now (no more tab delimiter signs), yay!

\item New differential gene ontology (diffGO()) function.

\item New gene-GO network (makeNetwork()) function.

\item New GO word cloud (makeWordCloud()) function.

\item New barplot function for plotting word frequencies found within GO terms (plotWordFreq()).

\item New significant/total peaks (hotspotPlot()) function.

\item Add new meanPeakLength(), meanPeakLengthPlot(), and peakLengthBoxplot() functions.

}}