@@ -1,6 +1,6 @@
 Package: geneXtendeR
 Type: Package
-Version: 1.3.2
+Version: 1.3.3
 Title: Optimized Functional Annotation Of ChIP-seq Data
 Description: geneXtendeR optimizes the functional annotation of ChIP-seq peaks using fast iterative
     peak-coordinate/GTF alignment algorithms.  Since different ChIP-seq peak callers produce different
