@@ -14,6 +14,7 @@ export(meanPeakLength)
 export(meanPeakLengthPlot)
 export(peakLengthBoxplot)
 export(peaksInput)
+export(peaksMerge)
 export(plotWordFreq)
 import(data.table)
 import(graphics)
