@@ -2,6 +2,13 @@
 \title{geneXtendeR News}
 \encoding{UTF-8}
 
+
+\section{Version 1.3.3}{\itemize{
+
+\item New peaksMerge() function.
+
+}}
+
 \section{Version 1.3.2}{\itemize{
 
 \item New allPeakLengths() function.
